wrap pre lines to avoid detail going too wide

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,6 +34,7 @@ body {
     line-height: 1.45;
     overflow: auto;
     padding: 16px;
+    white-space: pre-wrap;
   }
 }
 
